--- a/k8s/SSL/certificates.yaml
+++ b/k8s/SSL/certificates.yaml
@@ -2,7 +2,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: picketball-racketplanner-cert
-  namespace: default
+  namespace: synergia
 spec:
   secretName: picketball-racketplanner-dev-tls
   dnsNames:
