--- a/k8s/SSL/ingress.yaml
+++ b/k8s/SSL/ingress.yaml
@@ -4,7 +4,15 @@ metadata:
   name: picketball-racketplanner-ingress
   namespace: synergia
   annotations:
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    cert-manager.io/cluster-issuer: letsencrypt
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/server-snippet: |-
+      proxy_set_header X-Forwarded-Host $host;
+      proxy_set_header X-Forwarded-Server $host;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header Host $host;
 spec:
   ingressClassName: "nginx"
   rules:
@@ -32,4 +40,4 @@ spec:
   - hosts:
     - picketball.racketplanner.es
     - backend.picketball.racketplanner.es
-    secretName: picketball-racketplanner-dev-tls
+    secretName: picketball-racketplanner-tls
