--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - ./Backend/.env
     environment:
       - NODE_ENV=production
+      - DOMINIO_FRONTEND=http://localohst:5174
     networks:
       - picketball-network
 
