--- a/k8s/backend/deployment.yaml
+++ b/k8s/backend/deployment.yaml
@@ -1,33 +1,33 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: backend
+  name: picketball-racketplanner-backend
   labels:
-    app: backend
+    app: picketball-racketplanner-backend
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: backend
+      app: picketball-racketplanner-backend
   template:
     metadata:
       labels:
-        app: backend
+        app: picketball-racketplanner-backend
     spec:
       containers:
-      - name: backend
-        image: xesuspb/picketballplanner-backend:latest
+      - name: picketball-racketplanner-backend
+        image: xesuspb/picketball-racketplanner-backend:latest
         ports:
         - containerPort: 3000
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: backend-service
+  name: picketball-racketplanner-backend-service
 spec:
   type: ClusterIP
   ports:
   - port: 3000
     targetPort: 3000
   selector:
-    app: backend
+    app: picketball-racketplanner-backend
