Ajustando zona horaria en deployments k8s

--- a/k8s/backend/deployment.yaml
+++ b/k8s/backend/deployment.yaml
@@ -19,6 +19,9 @@ spec:
         image: xesuspb/picketballplanner-backend:latest
         ports:
         - containerPort: 3000
+        env:
+        - name: TZ
+          value: "Europe/Madrid"
 ---
 apiVersion: v1
 kind: Service
