--- a/k8s/frontend/deployment.yaml
+++ b/k8s/frontend/deployment.yaml
@@ -19,6 +19,9 @@ spec:
         image: xesuspb/picketballplanner-frontend:latest
         ports:
         - containerPort: 80
+        env:
+        - name: TZ
+          value: "Europe/Madrid"
 ---
 apiVersion: v1
 kind: Service
