--- a/k8s/SSL/ingress.yaml
+++ b/k8s/SSL/ingress.yaml
@@ -1,10 +1,10 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: picketball-racketplanner-ingress
+  name: pickleball-racketplanner-ingress
   namespace: synergia
   annotations:
-    nginx.ingress.kubernetes.io/cors-allow-origin: "https://picketball.racketplanner.es"
+    nginx.ingress.kubernetes.io/cors-allow-origin: "https://pickleball.racketplanner.es"
     nginx.ingress.kubernetes.io/enable-cors: "true"
     cert-manager.io/cluster-issuer: letsencrypt
     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
@@ -18,7 +18,7 @@ metadata:
 spec:
   ingressClassName: "nginx"
   rules:
-    - host: picketball.racketplanner.es
+    - host: pickleball.racketplanner.es
       http:
         paths:
           - path: /
@@ -28,7 +28,7 @@ spec:
                 name: picketball-racketplanner-frontend-service
                 port:
                   number: 80
-    - host: backend.picketball.racketplanner.es
+    - host: backend.pickleball.racketplanner.es
       http:
         paths:
           - path: /
@@ -40,6 +40,6 @@ spec:
                   number: 3000
   tls:
   - hosts:
-    - picketball.racketplanner.es
-    - backend.picketball.racketplanner.es
-    secretName: picketball-racketplanner-tls
+    - pickleball.racketplanner.es
+    - backend.pickleball.racketplanner.es
+    secretName: pickleball-racketplanner-tls
