--- a/k8s/SSL/ingress.yaml
+++ b/k8s/SSL/ingress.yaml
@@ -38,8 +38,19 @@ spec:
                 name: picketball-racketplanner-backend-service
                 port:
                   number: 3000
+    - host: dashboard.racketplanner.es
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: dashboard-racketplanner-frontend-service
+                port:
+                  number: 80
   tls:
   - hosts:
     - pickleball.racketplanner.es
     - backend.pickleball.racketplanner.es
+    - dashboard.racketplanner.es
     secretName: pickleball-racketplanner-tls
