--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -7,14 +7,19 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "extract-translations": "i18next-parser"
   },
   "dependencies": {
     "bootstrap": "^5.3.7",
     "dot-env": "^0.0.1",
     "dotenv": "^17.0.0",
+    "i18next": "^25.3.2",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.6.1",
     "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
@@ -26,6 +31,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.2.0",
+    "i18next-parser": "^9.3.0",
     "vite": "^7.0.0"
   }
 }
