--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -23,6 +23,10 @@
     "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
+    "@babel/generator": "^7.28.0",
+    "@babel/parser": "^7.28.0",
+    "@babel/traverse": "^7.28.0",
+    "@babel/types": "^7.28.1",
     "@eslint/js": "^9.29.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
@@ -31,7 +35,9 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.2.0",
+    "globby": "^14.1.0",
     "i18next-parser": "^9.3.0",
+    "slugify": "^1.6.6",
     "vite": "^7.0.0"
   }
 }
