--- a/k8s/Padelpointrabat/SSL/ingress.yaml
+++ b/k8s/Padelpointrabat/SSL/ingress.yaml
@@ -38,8 +38,18 @@ spec:
                 name: padelpointrabat-racketplanner-backend-service
                 port:
                   number: 3000
+    - host: dashboard.padelpointrabat.racketplanner.es
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: dashboard-padelpointrabat-racketplanner-service
+                port:
+                  number: 3000
   tls:
-  - hosts:
-    - padelpointrabat.racketplanner.es
-    - backend.padelpointrabat.racketplanner.es
-    secretName: padelpointrabat-racketplanner-tls
+    - hosts:
+        - padelpointrabat.racketplanner.es
+        - backend.padelpointrabat.racketplanner.es
+      secretName: padelpointrabat-racketplanner-tls
