añadiendo host para SSL

--- a/k8s/Padelpointrabat/SSL/ingress.yaml
+++ b/k8s/Padelpointrabat/SSL/ingress.yaml
@@ -52,4 +52,5 @@ spec:
     - hosts:
         - padelpointrabat.racketplanner.es
         - backend.padelpointrabat.racketplanner.es
+        - dashboard.padelpointrabat.racketplanner.es
       secretName: padelpointrabat-racketplanner-tls
