Inyectando idioma en deployment

--- a/k8s/Pickleball/backend/deployment.yaml
+++ b/k8s/Pickleball/backend/deployment.yaml
@@ -24,6 +24,8 @@ spec:
           value: "Europe/Madrid"
         - name: NODE_ENV
           value: production
+        - name: APP_LOCALE
+          value: es
 ---
 apiVersion: v1
 kind: Service
