--- a/k8s/Padelpointrabat/backend/deployment.yaml
+++ b/k8s/Padelpointrabat/backend/deployment.yaml
@@ -26,6 +26,8 @@ spec:
           value: production
         - name: APP_LOCALE
           value: fr
+        - name: CLUB_ID
+          value: 3c7b3769-9da0-4a93-be36-5a056db0dd79
 ---
 apiVersion: v1
 kind: Service
