--- a/k8s/Padelpointrabat/dashboard/deployment.yaml
+++ b/k8s/Padelpointrabat/dashboard/deployment.yaml
@@ -22,7 +22,7 @@ spec:
           env:
             - name: TZ
               value: "Europe/Madrid"
-            - name: NODE_ENV
+            - name: VITE_NODE_ENV
               value: production
 ---
 apiVersion: v1
