--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,3 +1,3 @@
 
 VITE_DOMINIO_BACKEND_DEV=http://localhost:3000
-VITE_DOMINIO_BACKEND_PROD=https://backend.padelpointrabat.racketplanner.es
+VITE_DOMINIO_BACKEND_PROD=https://backend.pickleball.racketplanner.es
