Extrayendo idioma y prefijo de número por defecto a variables de entorno --> .env

--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,3 +1,7 @@
 
 VITE_DOMINIO_BACKEND_DEV=http://localhost:3000
 VITE_DOMINIO_BACKEND_PROD=https://backend.pickleball.racketplanner.es
+
+VITE_APP_LOCALE=es
+
+VITE_NUMBER_PREFIX=34
