Temas extraídos a .env y header extrayendo título y logo del tema --> ahora todos los ajustes del cliente están en variables de entorno

--- a/Frontend/.env
+++ b/Frontend/.env
@@ -5,3 +5,5 @@ VITE_DOMINIO_BACKEND_PROD=https://backend.pickleball.racketplanner.es
 VITE_APP_LOCALE=es
 
 VITE_NUMBER_PREFIX=34
+
+VITE_THEME=pickleball
