--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -16,7 +16,10 @@ COPY . .
 
 RUN chown -R appuser:appgroup /app
 USER appuser
+
 #ENV NODE_ENV=production
+ARG VITE_NODE_ENV=production
+ENV VITE_NODE_ENV=$VITE_NODE_ENV
 
 EXPOSE 3000
 CMD ["node", "app.js"]
