Añadiendo variables de entorno para pasarela de pagos

--- a/Backend/.env
+++ b/Backend/.env
@@ -21,3 +21,5 @@ STRIPE_WEBHOOK_SECRET=whsec_MkHpIMMvG1nW11IZ8Mp5Pq5Wz7WKM9TK
 CLUB_ID=24f0c80b-fd53-47b6-89f1-0f197b792a4c
 
 APP_LOCALE=es
+
+PASARELA=true
