--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,11 +1,11 @@
 
 VITE_DOMINIO_BACKEND_DEV=http://localhost:3000
-VITE_DOMINIO_BACKEND_PROD=https://backend.pickleball.racketplanner.es
+VITE_DOMINIO_BACKEND_PROD=https://backend.padelpointrabat.racketplanner.es
 
-VITE_APP_LOCALE=es
+VITE_APP_LOCALE=fr
 
-VITE_NUMBER_PREFIX=34
+VITE_NUMBER_PREFIX=212
 
-VITE_THEME=pickleball
+VITE_THEME=padelpoint
 
-VITE_PASARELA=true
+VITE_PASARELA=false
