--- a/Backend/.env
+++ b/Backend/.env
@@ -20,6 +20,8 @@ STRIPE_WEBHOOK_SECRET=whsec_MkHpIMMvG1nW11IZ8Mp5Pq5Wz7WKM9TK
 
 CLUB_ID=3c7b3769-9da0-4a93-be36-5a056db0dd79
 
+CALENDARS_CLUB=padelpoint
+
 APP_LOCALE=fr
 
 pasarela=false
