Notificaciones partidas completas y canceladas a grupo whatsapp

--- a/Backend/.env
+++ b/Backend/.env
@@ -5,6 +5,7 @@ SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsI
 BUILDERBOT_URL=https://app.builderbot.cloud/api/v2/5b09fcb4-9e08-44a3-9269-fac73fb6c5ba/messages
 BUILDERBOT_KEY=bb-b6d2243c-7361-423a-aa27-cd481d8d8fc4
 
+NIVELES_JUGADORES=false
 WHATS_GROUP_LVL1=BEnQWMgSUbw8er7eXR5zpB
 WHATS_GROUP_LVL2=Jq8VVlqyqZx0tLgLwsmjtX
 WHATS_GROUP_LVL3=BsyVKqfPu1fB0BRYuVt1K1
@@ -19,8 +20,6 @@ STRIPE_API_KEY=sk_test_51RqxMXA2pgTxvqqdo3pnXDo1ULkneZWKpMkkTBIgKEWC1qq0aYu3GD0r
 STRIPE_WEBHOOK_SECRET=whsec_MkHpIMMvG1nW11IZ8Mp5Pq5Wz7WKM9TK
 
 CLUB_ID=3c7b3769-9da0-4a93-be36-5a056db0dd79
-
-CALENDARS_CLUB=padelpoint
 
 APP_LOCALE=fr
 
