--- a/Backend/.env
+++ b/Backend/.env
@@ -5,7 +5,7 @@ SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsI
 BUILDERBOT_URL=https://app.builderbot.cloud/api/v2/5b09fcb4-9e08-44a3-9269-fac73fb6c5ba/messages
 BUILDERBOT_KEY=bb-b6d2243c-7361-423a-aa27-cd481d8d8fc4
 
-NIVELES_JUGADORES=false
+NIVELES_JUGADORES=true
 WHATS_GROUP_LVL1=BEnQWMgSUbw8er7eXR5zpB
 WHATS_GROUP_LVL2=Jq8VVlqyqZx0tLgLwsmjtX
 WHATS_GROUP_LVL3=BsyVKqfPu1fB0BRYuVt1K1
