Añadiendo .env para ajustar niveles

--- a/Frontend/.env
+++ b/Frontend/.env
@@ -9,4 +9,7 @@ VITE_NUMBER_PREFIX=212
 VITE_THEME=padelpoint
 
 VITE_PASARELA=false
+
 VITE_NIVELES_JUGADORES=true
+VITE_NIVEL_MIN=1
+VITE_NIVEL_MAX=9
