--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,15 +1,15 @@
 
 VITE_DOMINIO_BACKEND_DEV=http://localhost:3000
-VITE_DOMINIO_BACKEND_PROD=https://backend.padelpointrabat.racketplanner.es
+VITE_DOMINIO_BACKEND_PROD=https://backend.hergonpadel.racketplanner.es
 
-VITE_APP_LOCALE=fr
+VITE_APP_LOCALE=es
 
-VITE_NUMBER_PREFIX=212
+VITE_NUMBER_PREFIX=34
 
-VITE_THEME=padelpoint
+VITE_THEME=hergonpadel
 
 VITE_PASARELA=false
 
 VITE_NIVELES_JUGADORES=true
 VITE_NIVEL_MIN=1
-VITE_NIVEL_MAX=9
+VITE_NIVEL_MAX=5
