--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,19 +1,19 @@
 
 VITE_DOMINIO_BACKEND_DEV=http://localhost:3000
-VITE_DOMINIO_BACKEND_PROD=https://backend.demo.racketplanner.es
+VITE_DOMINIO_BACKEND_PROD=https://backend.padelpointrabat.racketplanner.es
 
-VITE_APP_LOCALE=es
+VITE_APP_LOCALE=fr
 
-VITE_NUMBER_PREFIX=34
+VITE_NUMBER_PREFIX=212
 
-VITE_THEME=default
+VITE_THEME=padelpoint
 
 VITE_PASARELA=false
 
 VITE_NIVELES_JUGADORES=true
 VITE_NIVEL_MIN=1
-VITE_NIVEL_MAX=3
+VITE_NIVEL_MAX=9
 
 VITE_PARTIDAS_MIXTAS_OPTION=true
 
-VITE_INVITACIONES_PARTIDAS_ABIERTAS=true
+VITE_INVITACIONES_PARTIDAS_ABIERTAS=false
